styles for form

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -56,6 +56,10 @@
 }
 
 
+.active{display: block;}
+
+.inactive{display: none}
+
 .row::after {
   content: "";
   clear: both;
@@ -147,6 +151,10 @@ button.decline, button.accept, button.add{
   margin: 10px 0;
 }
 
+button.add{
+  float: right;
+}
+
 button.decline{
   background-color: #f15a24;
 }
@@ -157,6 +165,33 @@ button.accept{
 
 button.add{
   background-color: #003c50;
+}
+
+.feature-form-container{
+  margin-bottom: 50px;
+}
+
+label{
+  font-size: 1rem;
+}
+
+input{
+  margin-bottom: 25px;
+}
+
+label, input{
+  display: block;
+}
+
+.submit{
+  color: white;
+  background-color: #003c50;
+  float: left;
+  font-size: 1.3rem;
+}
+
+input[name="description"]{
+  height: 200px;
 }
 
 .project-list-item{
