styles and smaal html changes for vote buttons and votecount

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -118,7 +118,11 @@ hr{
 
 .active{display: block;}
 
-.inactive{display: none}
+button.inactive{cursor: default;}
+
+button.inactive i{
+  color:#eaeaea;
+}
 
 img {
   width: 100%;
@@ -137,6 +141,7 @@ button{
   height: auto;
   border: none;
   font-size: 2.5rem;
+  cursor: pointer;
 }
 
 button.decline i, button.accept i, button.add i{
@@ -164,7 +169,10 @@ button.accept{
 button.add{
   background-color: #003c50;
     float: right;
-
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
 }
 
 .project-list-item{
@@ -179,6 +187,12 @@ button.add{
 .feature-count, .comment-section-button{
   text-align: center;
 }
+
+.feature-count > button{
+  height: 60px;
+}
+
+.feature-text{padding: 35px;}
 
 /*Display feature count next to feature body on mobile devices*/
 .feature-count, .comment-section-button{width: 25%;}
