transition für die Farbveränderung bei feature umrandung hinzugefügt

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -183,6 +183,7 @@ button.add{
 
 .project-list-item:hover, .feature-list-item:hover{
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: 0.5s;
 }
 
 .feature-count, .comment-section-button{
