--- a/client/src/index.css
+++ b/client/src/index.css
@@ -120,6 +120,8 @@ hr{
 
 .inactive{display: none}
 
+span.active{display: inline}
+
 img {
   width: 100%;
   height: auto;
@@ -181,8 +183,8 @@ button.add{
 }
 
 /*Display feature count next to feature body on mobile devices*/
-.feature-count, .comment-section-button{width: 25%;}
-.feature-text, .comment-section-content{width: 75%;}
+.feature-count, .comment-section-button, .add-button{width: 25%;}
+.feature-text, .comment-section-content, .project-name{width: 75%;}
 
 
 
@@ -252,12 +254,22 @@ textarea[name="description"]{
     height: 200px;
 }
 
-.read-more{
-  color: #7fba24;
+.readMoreText{
+  color: #7fba24 !important;
+  display: block;
+  margin: 5px 0;
   font-size: 0.9rem;
 }
 
+.short-text{
+  display: block;
+  padding: 15px 0;
+}
 
+.feature-list-item{
+  margin-bottom: 50px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
 
 /* For desktop: */
 @media only screen and (min-width: 700px) {
@@ -298,4 +310,9 @@ textarea[name="description"]{
     cursor: zoom-out;
   }
 
+
+  .feature-list-item{
+    margin-bottom: 0;
+    box-shadow: none;
+  }
 }
