styled all forms and form buttons (#258)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,6 +55,10 @@
   padding: 15px;
 }
 
+body{
+  margin: 0;
+}
+
 
 .row::after {
   content: "";
@@ -108,6 +112,7 @@ h1{font-size: 2rem; }
 h2{font-size: 1.5rem;}
 h3{font-size: 1.3rem; margin: 0;}
 h4{font-size: 1.1rem}
+h5{font-size: 1.0rem; margin: 0;}
 p{font-size: 1rem;}
 a{ text-decoration: none; }
 
@@ -167,11 +172,13 @@ button.accept{
 
 button.add{
   background-color: #003c50;
-    float: right;
-  margin-block-start: 0.67em;
-  margin-block-end: 0.67em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
+  float: right;
+  transition: 0.4s;
+}
+
+.cross i{
+  transform: rotate(45deg);
+  transition: 0.3s;
 }
 
 .project-list-item{
@@ -245,32 +252,37 @@ footer div{
 .answers div{
   margin: 50px 0;
 }
-
-.feature-form-container{
-    margin-bottom: 50px;
+.form{
+  margin-bottom: 50px;
 }
 
 label{
-    font-size: 1rem;
+  font-size: 1rem;
+
 }
 
 input, textarea{
-    margin-bottom: 25px;
+  margin-bottom: 5px;
+  padding: 15px;
 }
 
 label, input{
-    display: block;
+  display: block;
+  width: 100%;
+
 }
 
 .submit{
-    color: white;
-    background-color: #003c50;
-    float: left;
-    font-size: 1.3rem;
+  color: white;
+  background-color: #003c50;
+  float: left;
+  font-size: 1.3rem;
+  margin: 15px;
 }
 
 textarea[name="description"]{
-    height: 200px;
+  height: 150px;
+  width: 100%;
 }
 
 .form-response{
@@ -282,6 +294,7 @@ textarea[name="description"]{
 .form-response > p{
   margin: 0;
 }
+
 
 .readMoreText{
   color: #7fba24 !important;
