--- a/client/src/index.css
+++ b/client/src/index.css
@@ -246,8 +246,12 @@ button.add{
   background-color: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   position: relative;
+}
+
+.feature-count{
+  padding: 19px 0;
 }
 
 .feature-count, .comment-section-button{
@@ -258,20 +262,30 @@ button.add{
   height: 60px;
 }
 
-.feature-text{padding: 35px;}
+.feature-count p{
+  margin: 25px;
+}
+
+.feature-text{padding: 30px 15px 25px 0;}
 
 .feature-image{
-  height: 210px;
+  height: 230px;
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center center;
   padding: 0;
 }
 
 /*Display feature count next to feature body on mobile devices*/
 .feature-count, .comment-section-button, .add-button, .delete-project, .decline-admin-button{width: 25%;}
-.feature-text, .comment-section-content, .project-name,  .FDV-comment-count, .project-list-item, .user-name{width: 75%;}
+.feature-text, .comment-section-content, .project-name,  .FDV-comment-count, .user-name{width: 75%;}
 
 
+
+.feature-text .comment-count p{
+  margin: 0;
+  font-weight: 600;
+}
 
 .comment-section-content{
   padding: 35px 25px;
@@ -406,7 +420,7 @@ select{
 
 .short-text{
   display: block;
-  padding: 15px 0;
+  padding: 15px 0 10px 0;
 }
 
 
