--- a/client/src/index.css
+++ b/client/src/index.css
@@ -183,6 +183,16 @@ button.decline, button.accept, button.add{
   text-align: center;
   margin: 10px 0;
 }
+button.propose{
+  border-radius: 25px;
+  background-color: #7fba24;
+  color: white;
+  height: 45px;
+  width: 250px;
+  font-size: 1.0rem;
+  text-align: center;
+  margin: 70px 0px 0px 0px ;
+}
 
 button.decline{
   background-color: #f15a24;
@@ -355,6 +365,12 @@ select{
 
 .form-response{
   padding: 25px;
+  border: 3px solid #003c50;
+  min-height: 120px;
+}
+
+.placeholder{
+  padding: 40px;
   border: 3px solid #003c50;
   min-height: 120px;
 }
