Cross turns back now aufter submitting user response and has transition time and spinner has columns (#324)
* abstand angepasst

* cross is turning back now, when form submited, with transition

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -172,7 +172,10 @@ button{
 
 button.decline i, button.accept i, button.add i{
   color: white;
+  transition: 0.3s;
 }
+
+
 
 button.decline, button.accept, button.add{
   border-radius: 25px;
