fixes: FR only if features to review exsist and placeholder styled

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -242,6 +242,16 @@ button.propose{
   margin: 70px 0px 0px 0px ;
 }
 
+button.propose-feature{
+  background-color: #7fba24;
+  color: white;
+  height: 45px;
+  width: 250px;
+  font-size: 1.0rem;
+  text-align: center;
+  margin: 30px 0px 0px 0px ;
+}
+
 button.decline{
   background-color: #f15a24;
 }
