--- a/client/src/index.css
+++ b/client/src/index.css
@@ -495,6 +495,10 @@ label, input{
 }
 
 
+.login{
+  margin: 15px 0;
+  background-color: rgba(234, 234, 234, 0.95);
+}
 textarea[name="description"]{
   height: 150px;
   width: 100%;
